@@ -1,3 +1,14 @@
+2003-05-04  H.J. Lu <hjl@gnu.org>
+
+	* elflink.h (elf_merge_symbol): Correctly handle weak definiton.
+
+2003-05-04  H.J. Lu <hjl@gnu.org>
+
+	* elflink.h (elf_merge_symbol): Don't record a hidden/internal
+	symbol dynamic. Check indirection when removing the old
+	definition for symbols with non-default visibility.
+	(elf_add_default_symbol): Skip when told by elf_merge_symbol.
+
 2003-05-03  Daniel Jacobowitz  <drow@mvista.com>
 
 	Merge from mainline:
